deploy/k8s/overlays/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openlaunch-web
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: web
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 150m
              memory: 192Mi
            limits:
              cpu: 750m
              memory: 768Mi
